Fix report overflows

--- a/style/less/kent/core.less
+++ b/style/less/kent/core.less
@@ -12,10 +12,6 @@ body.kent-contrast {
     }
 }
 
-.pagelayout-report #page-content {
-    overflow: auto;
-}
-
 #page-admin-course-category .generalbox th {
     font-size: inherit;
     border-bottom-width: 1px !important;
@@ -383,10 +379,6 @@ img.iconsmall,
 
 .block div.content input[type="submit"] {
     width: 152px;
-}
-
-.pagelayout-report #page-content {
-    overflow: hidden;
 }
 
 #ebutton {
